<resources>
    <string name="app_name">ValverdeRunKeeper</string>
    <string name="pauseButton">PAUSE</string>
    <string name="stopButton">STOP</string>
    <string name="startButton">START</string>
    <string name="initDistanceText">0.00 km</string>
    <string name="initSpeedText">0.00 km/h</string>
    <string name="initTimeText">0:00:00</string>
    <string name="speedUnits">km/h</string>
    <string name="distanceUnits">km</string>
    <string name="gpsAccuracyUnits">m</string>
    <string name="fullNameOfDistanceMetersUnits">meters</string>
    <string name="fullNameOfDistanceKilometersUnits">kilometers</string>
    <string name="fullNameOfDistanceKilometerUnits">kilometer</string>
    <string name="gpsTimeUnits">sec</string>

    <string name="accuracyInitStatus">None</string>
    <string name="accuracyExcellentStatus">Excellent</string>
    <string name="accuracyVeryGoodStatus">Very Good</string>
    <string name="accuracyGoodStatus">Good</string>
    <string name="accuracyFairStatus">Fair</string>
    <string name="accuracyBadStatus">Bad</string>
    <string name="accuracyFatalStatus">Fatal</string>
    <string name="title_activity_finalize_run">FinalizeRunActivity</string>

    <!-- Main Menu -->
    <string name="goRunningLabel">GO RUNNING</string>
    <string name="statisticsLabel">STATISTICS</string>
    <string name="settingsLabel">SETTINGS</string>


    <!-- Saving result -->
    <string name="timeLabel">Time:</string>
    <string name="avgSpeedLabel">Averange Speed:</string>
    <string name="distanceLabel">Distance:</string>
    <string name="caloriesLabel">Calories:</string>
    <string name="dateLabel">Date:</string>
    <string name="copperTestLabel">Copper test:</string>
    <string name="newResult">New Result</string>
    <string name="recordLabel">Record!</string>
    <string name="improvedLabel">Improved!</string>
    <string name="alertTitle">Are you sure to delete this result?</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="saveButton">SAVE</string>
    <string name="deleteButton">DELETE</string>

    <!-- Results presentation -->
    <string name="presentationNumberLabel">Num</string>
    <string name="presentationDateLabel">Date</string>
    <string name="presentationDistanceLabel">Distance</string>
    <string name="presentationTimeLabel">Time</string>
    <string name="presentationAVGSpeedLabel">Speed</string>
    <string name="presentationAVGLabel">Averange</string>

    <!-- Settings -->
    <string name="appSettingsLabel">Application Settings</string>
    <string name="gpsAccuracy">Gps accuracy:</string>
    <string name="gpsEventsRefreshTime">Gps refresh:</string>
    <string name="gpsDefaultMapZoom">Default map zoom:</string>
    <string name="gpsAmountOfEventsInAvgSpeed">Events in avg speed:</string>
    <string name="gpsMaxUpperChangeBetweenEvents">Max upper change:</string>
    <string name="gpsMaxLowerChangeBetweenEvents">Max lower change:</string>
    <string name="gpsChangeIncreasePerMeasure">Change factor:</string>
    <string name="gpsSoundNotifications">Sound notifications:</string>
    <string name="gpsSoundNotificationsDistanceInterval">Distance interval:</string>
    <string name="gpsScreenLockSupport">Screen lock support:</string>
    <string name="gpsSaveSettingsButton">Save settings</string>
    <string name="gpsDefaultPace">Default pace:</string>

    <!--Pace menu items-->
    <string name="paceMenu10">10.0</string>
    <string name="paceMenu10.5">10.5</string>
    <string name="paceMenu11">11.0</string>
    <string name="paceMenu11.5">11.5</string>
    <string name="paceMenu12">12.0</string>
    <string name="paceMenu12.5">12.5</string>
    <string name="paceMenu13">13.0</string>
</resources>
