<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightGreen"
    tools:context="com.example.valverde.valverderunkeeper.main_menu.MainMenuActivity">
    
    <Button android:id="@+id/goRunningButton"
        style="@style/mainMenuButtonStyle"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/goRunningLabel" />

    <Button android:id="@+id/statisticsButton"
        style="@style/mainMenuButtonStyle"
        android:layout_marginBottom="30dp"
        android:text="@string/statisticsLabel" />

    <Button android:id="@+id/setingsButton"
        style="@style/mainMenuButtonStyle"
        android:text="@string/settingsLabel" />
</LinearLayout>
