<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightGreen"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.valverde.valverderunkeeper.settings.SettingsActivity">

    <TextView
        android:gravity="center"
        android:text="@string/appSettingsLabel"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/darkGreen"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsAccuracy"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsAccuracyField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/gpsAccuracyUnits"
                    style="@style/settingsStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsEventsRefreshTime"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsEventsRefreshField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/gpsTimeUnits"
                    style="@style/settingsStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsScreenLockSupport"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <CheckBox android:id="@+id/gpsScreenLockSupportCheckBox"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsSoundNotifications"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <CheckBox android:id="@+id/gpsNotificationCheckBox"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/gpsSoundNotificationsDistanceIntervalLabel"
                    android:text="@string/gpsSoundNotificationsDistanceInterval"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsSoundNotificationsDistanceIntervalField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView android:id="@+id/gpsSoundNotificationsDistanceIntervalUnitsField"
                    android:text="@string/distanceUnits"
                    style="@style/settingsStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/gpsDefaultPaceLabel"
                    android:text="@string/gpsDefaultPace"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsDefaultPaceField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView android:id="@+id/gpsDefaultPaceFieldUnits"
                    android:text="@string/speedUnits"
                    style="@style/settingsStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsDefaultMapZoom"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsDefaultMapZoomField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_marginEnd="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsAmountOfEventsInAvgSpeed"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsAmountOfEventsInAvgSpeedField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_marginEnd="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsMaxUpperChangeBetweenEvents"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsMaxUpperChangeBetweenEventsField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/speedUnits"
                    style="@style/settingsStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsMaxLowerChangeBetweenEvents"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsMaxLowerChangeBetweenEventsField"
                    style="@style/settingsStyle"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/speedUnits"
                    style="@style/settingsStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/gpsChangeIncreasePerMeasure"
                    style="@style/settingsStyle"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/gpsChangeIncreasePerMeasureField"
                    style="@style/settingsStyle"
                    android:gravity="end"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/speedUnits"
                    style="@style/settingsStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button android:id="@+id/settingsSaveButton"
            android:text="@string/gpsSaveSettingsButton"
            style="@style/tinyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>