<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@color/lightGreen"
    tools:context=".running.TrackerActivity">


    <LinearLayout android:layout_weight="3"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar android:id="@+id/accuracyProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="false"
            android:max="100"
            android:layout_marginTop="5dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/accuracyProgressBarField"
            android:text="@string/accuracyInitStatus"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <fragment android:id="@+id/map"
        android:layout_weight="90"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp" />


    <TextView android:id="@+id/timeField"
        android:text="@string/initTimeText"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingStart="40dp"
        android:paddingEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView android:id="@+id/distanceField"
            android:text="@string/initDistanceText"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView android:id="@+id/speedField"
            android:text="@string/initSpeedText"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:layout_marginTop="15dp"
        android:paddingEnd="50dp"
        android:orientation="horizontal" >

        <Button android:id="@+id/stopButton"
            android:text="@string/stopButton"
            style="@style/tinyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button android:id="@+id/startButton"
            android:text="@string/startButton"
            style="@style/tinyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>