<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".finalize_result.FinalizeRunActivity">

    <fragment android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_weight="95"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <GridLayout android:id="@+id/educationGridLayout"
        android:columnCount="2"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/timeLabel"
            style="@style/statisticsFont"
            android:text="@string/timeLabel"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@id/timeField"
            style="@style/statisticsFont"
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView android:id="@+id/avgSpeedLabel"
            style="@style/statisticsFont"
            android:text="@string/avgSpeedLabel"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/avgSpeedField"
            style="@style/statisticsFont"
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView android:id="@+id/distanceLabel"
            style="@style/statisticsFont"
            android:text="@string/distanceLabel"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/distanceField"
            style="@style/statisticsFont"
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/caloriesLabel"
            style="@style/statisticsFont"
            android:text="@string/caloriesLabel"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/caloriedField"
            style="@style/statisticsFont"
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/saveButton"
            style="@style/statisticsFont"
            android:text="@string/saveButton"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <Button android:id="@+id/deleteButton"
            style="@style/statisticsFont"
            android:text="@string/deleteButton"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
