<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.valverde.valverderunkeeper.statistics.ResultPresentationActivity">


    <fragment android:id="@+id/map"
        android:layout_weight="10"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/dateLabel"
                style="@style/presentationLabelsFont"
                android:gravity="start"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/dateField"
                style="@style/statisticsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/distanceLabel"
                style="@style/presentationLabelsFont"
                android:gravity="start"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/distanceField"
                style="@style/statisticsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/timeLabel"
                style="@style/presentationLabelsFont"
                android:gravity="start"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/timeField"
                style="@style/statisticsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/avgSpeedLabel"
                style="@style/presentationLabelsFont"
                android:gravity="start"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/avgSpeedField"
                style="@style/statisticsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/caloriesLabel"
                style="@style/presentationLabelsFont"
                android:gravity="start"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/caloriesField"
                style="@style/statisticsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/copperTestLabel"
                style="@style/presentationLabelsFont"
                android:gravity="start"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/copperTestField"
                style="@style/statisticsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/gpsAccuracy"
                style="@style/presentationLabelsFont"
                android:gravity="start"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/accuracyField"
                style="@style/statisticsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
